<resources>
    <string name="app_name">BroomIt</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_transform">Transform</string>
    <string name="menu_today">Aujourd\'hui</string>

    <!-- Three-dots menu (overflow.xml) -->
    <string name="menu_profile">Profil</string>
    <string name="menu_settings">Paramètres</string>
    <string name="action_disconnect">Se déconnecter</string>
    <string name="menu_locations">Domiciles</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the item</string>

    <!-- Strings related to Login -->
    <string name="prompt_username">Nom d\'utilisateur</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="prompt_email">Courriel</string>
    <string name="action_sign_in">Se connecter</string>
    <string name="action_register">Créer un compte</string>
    <string name="welcome">"Welcome!"</string> <!-- TODO: not used right now... -->
    <string name="invalid_username">Not a valid username</string> <!-- TODO: not used right now... -->
    <string name="invalid_password">Password must be >5 characters</string> <!-- TODO: not used right now... -->
    <string name="login_failed">"Login failed"</string> <!-- TODO: not used right now... -->
    <string name="toggle_connexion">Vous avez un compte? Cliquer ici.</string>
    <string name="toggle_creer_compte">Vous n\'avez pas de compte? Cliquer ici.</string>

    <!-- Strings related to Tasks -->
    <string name="no_task_today">Aucune tâche aujourd\'hui</string>

    <!-- Strings related to Profile -->
    <string name="new_password">Nouveau mot de passe</string>
    <string name="confirm_password">Confirmation du mot de passe</string>
    <string name="save_changes">Enregistrer les modifications</string>
    <string name="no_empty_username">Le nom d\'utilisateur ne peut pas être vide</string>
    <string name="no_empty_email">Le courriel ne peut pas être vide</string>
    <string name="missing_at_email">Le courriel doit contenir une arobase (@)</string>
    <string name="passwords_do_not_match">Les mots de passe ne correspondent pas</string>
    <string name="save_changes_success">Les modifications ont été enregistrées avec succès</string>

    <!-- Strings related to Locations -->
    <string name="add_location">Ajouter un domicile</string>
    <string name="create_location_title">Création d\'un domicile</string>
    <string name="submit">Soumettre</string>
    <string name="prompt_location_name">Nom du domicile</string>
    <string name="prompt_owner_phone_number">Numéro de téléphone du proprétaire</string>
    <string name="prompt_find_location">Trouver le domicile</string>
    <string name="label_notes">Notes</string>

    <!-- Strings related to Tasks -->
    <string name="add_task">Ajouter une tâche</string>
    <string name="create_task_title">Création d\'une tâche</string>
    <string name="task_name">Nom de la tâche</string>
    <string name="task_schedule">Horaire de la tâche</string>

    <string name="schedule_type">Type de récurence</string>
    <string name="schedule_daily">Par jour</string>
    <string name="schedule_weekly">Par semaine</string>
    <string name="schedule_yearly">Par année</string>
</resources>